# learn-rust-web

./: .dockerignore  .env  .env.base  Cargo.toml  Dockerfile  docker-compose.yml  main
.sqlx/: query-358f243683ea759a066982024b15935c547aac60d82a4e5e2961dce893783853.json  query-9be4cfdb625be552b54f86f0a95b92c3a0c1e8bcb85c8fb6c30271f1ccac946f.json  query-d4e69722cb52ff1da9bd0b43736c705f743bf48641c55e247d93e1bf43eb3a69.json
.trae/rules/: rust-rules.md
db/init/: initialize.sql
docs/: PROJECT_LEARNING_NOTES.md  PROJECT_NEXT_STEPS.md  PROJECT_STRUCTURE.md
src/: main.rs  startup.rs
src/api/: auth.rs  users.rs
src/config/: mod.rs
src/domain/: auth.rs  error.rs  jwt.rs  mod.rs  user.rs
src/infrastructure/: db.rs  error.rs  jwt.rs  mod.rs  state.rs
src/repositories/: mod.rs  user_repository.rs
src/services/: auth_service.rs  user_service.rs
