[package]
name = "rust-lesson"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
chrono = "0.4.43"
async-trait = "0.1.89"
